<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:padding="25dp"
        android:text="@string/welcomeTxt"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/first_row_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="0dp"
        android:weightSum="1">

        <Button
            android:id="@+id/weightTrainingBtn"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_margin="0dp"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/weightBtn"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cardioBtn"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_margin="0dp"
            android:layout_weight="0.5"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/cardioBtn"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_row_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_row_layout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="0dp"
        android:weightSum="1">

        <Button
            android:id="@+id/calorieBtn"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_margin="0dp"
            android:layout_weight="0.5"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/title_calorieBtn"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/profileBtn"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_margin="0dp"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/profileBtn"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progresslayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="85dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/progressBar"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="Progress"
            android:textSize="17sp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

</RelativeLayout>