<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.andre.ss1a_fitnessapp.Homepage"
    tools:layout_editor_absoluteY="81dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/welcomeTxt"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:padding="10dp"
            tools:text="Welcome back Andre!" />

        <LinearLayout
            android:id="@+id/first_row_layout"
            android:layout_below="@id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/weightTrainingBtn"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:layout_weight="0.5"
                android:layout_margin="3dp"
                android:background="@color/colorAccent"
                android:fontFamily="sans-serif-condensed"
                android:onClick="homeOnClick"
                android:text="@string/weightBtn"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cardioBtn"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:layout_weight="0.5"
                android:layout_margin="3dp"
                android:background="@color/colorAccent"
                android:fontFamily="sans-serif-condensed"
                android:onClick="homeOnClick"
                android:text="@string/cardioBtn"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/second_row_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@id/first_row_layout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/calorieBtn"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_margin="3dp"
            android:layout_weight="0.5"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif-condensed"
            android:onClick="homeOnClick"
            android:text="@string/title_calorieBtn"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/profileBtn"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_margin="3dp"
            android:layout_weight="0.5"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif-condensed"
            android:onClick="homeOnClick"
            android:text="@string/profileBtn"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/progressBar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/mainNav"
        android:text="Progressbar placeholder"
        android:layout_marginBottom="10dp"/>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/mainNav"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation"
        tools:layout_editor_absoluteY="546dp" />

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/second_row_layout">

    </FrameLayout>

</RelativeLayout>
